<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngresoDatosRR">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="236dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/quantum" />

            <EditText
                android:id="@+id/Quantum"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre" />

            <EditText
                android:id="@+id/nombreP"
                android:layout_width="109dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/boton_eliminarP"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:onClick="eliminarProceso"
                android:text="@string/botonEliminarProceso"
                android:textSize="8sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duracion" />

            <EditText
                android:id="@+id/duracionP"
                android:layout_width="102dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/llegada" />

            <EditText
                android:id="@+id/llegadaP"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Space
                android:layout_width="92dp"
                android:layout_height="match_parent" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/botonGuardar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="RegistrarProceso"
                android:text="@string/guardar" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:animationCache="true"
        android:background="#D6F9A467"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt1" />

            <TextView
                android:id="@+id/todos_proceso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/listadoDeProceso" />
        </LinearLayout>
    </ScrollView>

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="373dp"
        android:layout_height="51dp"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView4">

        <TableRow
            android:layout_width="348dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="borrarTodoProcesos"
                android:text="@string/botonBorrar" />

            <Space
                android:layout_width="97dp"
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/boton_calcular"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:onClick="calcular"
                android:text="@string/boton_calcular" />

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>